infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image: rakshithshenoy/expiration
          resources:
            limits:
              memory: "400Mi"
              cpu: "150m"
          ports:
            - containerPort: 3000
