infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: rakshithshenoy/auth
          resources:
            limits:
              memory: "400Mi"
              cpu: "150m"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - port: 3000
      targetPort: 3000
