infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: rakshithshenoy/client
          resources:
            limits:
              memory: "800Mi"
              cpu: "600m"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
