infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: rakshithshenoy/orders
          resources:
            limits:
              memory: "400Mi"
              cpu: "150m"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - port: 3000
      targetPort: 3000
