infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: rakshithshenoy/payments
          resources:
            limits:
              memory: "400Mi"
              cpu: "150m"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  ports:
    - port: 3000
      targetPort: 3000
