infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: rakshithshenoy/tickets
          resources:
            limits:
              memory: "400Mi"
              cpu: "150m"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - port: 3000
      targetPort: 3000
